--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.18",
     "@mui/material-nextjs": "^5.15.11",
-    "next": "14.2.3",
-    "react": "^18",
-    "react-dom": "^18"
+    "next": "14.3.0-canary.59",
+    "react": "19.0.0-beta-4508873393-20240430",
+    "react-dom": "19.0.0-beta-4508873393-20240430",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20",
